<resources>
    <string name="app_name">MyDigimind</string>
    <string name="title_home">My Board</string>
    <string name="title_dashboard">New Reminder</string>
    <string name="title_notifications">Notifications</string>
    <string name="reminder_description">What do you want to remember to do?</string>
    <string name="reminder_hint">Take my pill</string>
    <string name="day_description">When do you want to do it?</string>
    <string name="time_description">At what time?</string>
    <string name="monday">Monday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="time_btn">Set Time</string>
</resources>